yaml/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: flask-example
  name: flask-example
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-example
  template:
    metadata:
      labels:
        app: flask-example
    spec:
      containers:
      - image: johnlonganecker/flask-example-for-argocd
        name: flask-example-for-argocd
        ports:
        - containerPort: 5000
